--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@exmg/exmg-markdown-editor",
   "flat": true,
-  "version": "3.0.1",
+  "version": "3.0.2",
   "description": "Element that wrappes around marked-element to make the markdown editable",
   "main": "exmg-markdown-editor.js",
   "contributors": [
@@ -49,5 +49,8 @@
     "lint": "polymer lint --rules polymer-3 --input *.js",
     "eslint": "eslint . --ext js,html --ignore-path .gitignore",
     "analyze": "polymer analyze --input exmg-markdown-editor.js > analysis.json"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
