--- a/package.json
+++ b/package.json
@@ -21,22 +21,22 @@
   "license": "MIT",
   "homepage": "https://github.com/ExmgElements/exmg-markdown-editor",
   "dependencies": {
-    "@polymer/iron-flex-layout": "^3.0.0-pre.1",
-    "@polymer/iron-icon": "^3.0.0-pre.1",
-    "@polymer/iron-iconset-svg": "^3.0.0-pre.1",
-    "@polymer/polymer": "^3.0.0-pre.1",
-    "codemirror": "^5.37.0"
+    "@polymer/iron-flex-layout": "^3.0.1",
+    "@polymer/iron-icon": "^3.0.1",
+    "@polymer/iron-iconset-svg": "^3.0.1",
+    "@polymer/polymer": "^3.0.5",
+    "codemirror": "^5.40.2"
   },
   "devDependencies": {
-    "@polymer/iron-component-page": "^3.0.0-pre.19",
-    "@polymer/paper-styles": "^3.0.0-pre.19",
-    "@polymer/iron-demo-helpers": "^3.0.0-pre.19",
-    "@polymer/marked-element": "^3.0.0-pre.19",
-    "eslint": "^4.11.0",
+    "@polymer/iron-component-page": "^3.0.0-pre.21",
+    "@polymer/iron-demo-helpers": "^3.0.2",
+    "@polymer/marked-element": "^3.0.1",
+    "@polymer/paper-styles": "^3.0.1",
+    "eslint": "^4.19.1",
     "eslint-config-exmg": "latest",
     "eslint-plugin-html": "^3.0.0",
-    "wct-browser-legacy": "^1.0.0",
-    "github-markdown-css": "^2.10.0"
+    "github-markdown-css": "^2.10.0",
+    "wct-browser-legacy": "^1.0.1"
   },
   "resolutions": {
     "@webcomponents/webcomponentsjs": "2.0.0",
