--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@polymer/iron-icon": "^3.0.1",
     "@polymer/iron-iconset-svg": "^3.0.1",
     "@polymer/polymer": "^3.0.5",
-    "codemirror": "^5.40.2"
+    "codemirror": "5.32.0"
   },
   "devDependencies": {
     "@polymer/iron-component-page": "^3.0.0-pre.21",
