PTWO-213 Migration to typescript and lit-element. Add tests.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,11 @@ cache:
     - node_modules
 
 install:
-- npm install
-- npm i polymer-cli
+  - npm install
+  - npm i polymer-cli
 
 before_script:
-- polymer lint --rules polymer-3 --input *.html
-- eslint . --ext js,html --ignore-path .gitignore
+  - npm run build
 
 addons:
   firefox: latest
@@ -23,6 +22,6 @@ addons:
     - google-chrome-stable
 
 script:
-- xvfb-run polymer test
+- xvfb-run npm run test
 
 dist: trusty
