--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@exmg/exmg-markdown-editor",
   "flat": true,
   "version": "3.0.5",
-  "description": "Element that wrappes around marked-element to make the markdown editable",
+  "description": "Element that wrap-around marked-element to make the markdown editable",
   "main": "exmg-markdown-editor.js",
   "contributors": [
     "Ex Machina Group"
@@ -10,6 +10,8 @@
   "keywords": [
     "web-components",
     "polymer",
+    "typescript",
+    "lit-elemnt",
     "markdown",
     "editor",
     "wysiwyg"
@@ -20,35 +22,56 @@
   },
   "license": "MIT",
   "homepage": "https://github.com/ExmgElements/exmg-markdown-editor",
+  "files": [
+    "exmg-*.js",
+    "exmg-*.d.ts"
+  ],
   "dependencies": {
     "@polymer/iron-flex-layout": "^3.0.1",
     "@polymer/iron-icon": "^3.0.1",
     "@polymer/iron-iconset-svg": "^3.0.1",
     "@polymer/polymer": "^3.1.0",
-    "codemirror": "5.32.0"
+    "codemirror": "5.32.0",
+    "lit-element": "^2.0.1"
   },
   "devDependencies": {
-    "@polymer/iron-component-page": "^4.0.1",
     "@polymer/iron-demo-helpers": "^3.0.2",
     "@polymer/marked-element": "^3.0.1",
     "@polymer/paper-styles": "^3.0.1",
-    "eslint": "^4.19.1",
-    "eslint-config-exmg": "latest",
-    "eslint-plugin-html": "^3.0.0",
+    "@polymer/test-fixture": "^4.0.2",
+    "@types/chai": "^4.1.7",
+    "@types/codemirror": "^0.0.71",
+    "@types/mocha": "^5.2.5",
+    "@types/polymer": "^1.2.6",
+    "@webcomponents/webcomponentsjs": "^2.2.4",
+    "chai": "^4.2.0",
     "github-markdown-css": "^2.10.0",
-    "wct-browser-legacy": "^1.0.2"
+    "gulp": "^4.0.0",
+    "gulp-rename": "^1.3.0",
+    "gulp-replace": "^1.0.0",
+    "mocha": "^5.2.0",
+    "tslint": "^5.12.1",
+    "tslint-config-exmg": "^1.0.2",
+    "typedoc": "^0.14.2",
+    "typescript": "^3.2.4",
+    "wct-mocha": "^1.0.0"
   },
   "resolutions": {
-    "@webcomponents/webcomponentsjs": "2.0.0",
-    "type-detect": "1.0.0",
-    "supports-color": "3.1.2",
-    "inherits": "2.0.3",
-    "samsam": "1.1.2"
+    "@polymer/polymer": "3.1.0"
   },
   "scripts": {
-    "lint": "polymer lint --rules polymer-3 --input *.js",
-    "eslint": "eslint . --ext js,html --ignore-path .gitignore",
-    "analyze": "polymer analyze --input exmg-markdown-editor.js > analysis.json"
+    "gen-docs": "typedoc --excludeNotExported --excludeExternals --excludePrivate --excludeProtected --ignoreCompilerErrors --exclude '{**/*test*,**/node_modules/**,**/test/**}' --out docs/ *.ts",
+    "build": "npm run lint && npm run tsc",
+    "tsc": "tsc -b ./tsconfig.json",
+    "prepublishOnly": "npm run build",
+    "preversion": "npm run build",
+    "start": "gulp serve",
+    "lint-src": "tslint -c ./tslint.json --project ./",
+    "lint-test": "tslint -c ./test/tslint.json --project ./",
+    "lint": "npm run lint-src && npm run lint-test",
+    "test-dev": "polymer test --npm -l chrome -p",
+    "test": "polymer test --npm --expanded",
+    "test:integration": "polymer build # test that psk builds without error with the CLI"
   },
   "publishConfig": {
     "access": "public"
